--- a/fe/src/components/widgets/ListWidget/ListWidget.scss
+++ b/fe/src/components/widgets/ListWidget/ListWidget.scss
@@ -1,7 +1,5 @@
 .list-widget {
-  position: absolute;
-  top: 64px;
-  bottom: 52px;
   overflow-y: scroll;
   width: 100%;
+  height: 100%;
 }
